@@ -1,4 +1,4 @@
-$Id: History,v 1.8 2001-02-20 15:58:34 maire Exp $
+$Id: History,v 1.9 2001-02-21 12:15:45 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -15,6 +15,9 @@ track of all tags.
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
      
+21-02-01  mma (testem2-V03-00-03)
+          - hbook histograms restored
+	            
 20-02-01  mma (testem2-V03-00-02)
           - verbose stepping adapted for STL
 	  - save rndm at begin of event     
